fix text alignment (#973)

--- a/src/molecules/ShoppingCart/ShoppingCartItem.pcss
+++ b/src/molecules/ShoppingCart/ShoppingCartItem.pcss
@@ -148,7 +148,7 @@
 
       &__container {
         display: grid;
-        grid-template-columns: auto 2rem;
+        grid-template-columns: 4rem 2rem;
       }
 
       &__number {
